Allow for updating review progres
