# cmd/internal/dto/requests/reviews.go
@@ -1,5 +1,7 @@
 package requests
 
+import "github.com/simondanielsson/apPRoved/cmd/constants"
+
 type CreateRepositoryRequest struct {
 	Name  string `json:"name"`
 	URL   string `json:"url"`
@@ -20,4 +22,9 @@ type CompleteReviewRequest struct {
 	ReviewID       uint                `json:"review_id"`
 	ReviewStatusID uint                `json:"review_status_id"`
 	FileReviews    []FileReviewRequest `json:"file_reviews"`
+}
+
+type UpdateReviewRequest struct {
+	Progress int                    `json:"progress"`
+	Status   constants.ReviewStatus `json:"status"`
 }
